# flat-management-app

./: .env.example  .gitignore  BitchHieu  README.md  TODO  TUTORIAL.md  components.json  configure.ps1  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release-build.yml
it3180-app-webserver/: Cargo.toml  Secrets.toml.example
it3180-app-webserver/src/: main.rs  middleware.rs  router.rs  webhook.rs
it3180-app-webserver/src/admin/: mod.rs
it3180-app-webserver/src/authenticate/: mod.rs  recover_password.rs  validate_token.rs
it3180-app-webserver/src/entities/: family.rs  fees_room_assignment.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  transaction_logs.rs  transactions.rs  users.rs
it3180-app-webserver/src/family/: mod.rs
it3180-app-webserver/src/household/: mod.rs
it3180-app-webserver/src/manager/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_users_table.rs  m20240101_000001_create_fees_table.rs  m20240101_000002_create_password_recovery_table.rs  m20240101_000003_create_rooms_table.rs  m20240101_000004_create_room_tenant_table.rs  m20240101_000005_create_fees_room_table.rs  m20240101_000006_create_transactions_table.rs  m20240101_000007_create_notifications_table.rs  m20240101_000008_create_fee_recurrence_table.rs  m20240101_000009_create_family_table.rs  m20240101_000010_create_transaction_logs_table.rs  m20240924_000001_create_sessions_table.rs
src/: App.css  App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/admin/: mod.rs
src-tauri/src/entities/: mod.rs  sea_orm_active_enums.rs  sessions.rs  users.rs
src-tauri/src/family/: mod.rs
src-tauri/src/household/: mod.rs
src-tauri/src/manager/: mod.rs
src-tauri/src/payment/: mod.rs
src-tauri/src/user/: auth.rs  get_info.rs  info.rs  mod.rs  refresh_token.rs  tokens.rs  types.rs
src/components/: header.tsx  tiles.tsx
src/components/ui/: calendar.tsx  data-table.tsx  multi-select.tsx  password-input.tsx  popover.tsx
src/lib/: add-fee.tsx  auth.ts  columns.tsx  react-table.d.ts  settings.ts  todo.tsx  types.ts  user.ts  utils.ts
src/routes/: __root.tsx  index.tsx
src/routes/(auth)/: _layout.tsx
src/routes/(auth)/_layout/: index.tsx  login.tsx  passchange.tsx  password-reset.tsx  password.tsx  passwordEmail.tsx  passwordTele.tsx  register.tsx
src/routes/dashboard/: _layout.tsx
src/routes/dashboard/_layout/: index.tsx  settings.tsx  tenant.tsx
src/routes/dashboard/_layout/account/: edit.tsx  index.tsx
src/routes/dashboard/_layout/admin/: _layout.tsx
src/routes/dashboard/_layout/admin/_layout/: accounts.tsx
src/routes/dashboard/_layout/fees/: index.tsx  info.$feeId.tsx
src/routes/dashboard/_layout/homes/: index.tsx
src/routes/dashboard/_layout/household/: family.tsx  index.tsx
src/routes/dashboard/_layout/manager/: add.tsx  collect.tsx  delete.$feeId.tsx  delete.tsx  index.tsx  info.$feeId.tsx
src/routes/dashboard/_layout/news/: index.tsx
src/routes/dashboard/_layout/notifications/: index.tsx  manager.tsx
src/routes/dashboard/_layout/notifyad/: index.tsx
src/routes/dashboard/_layout/notifytenant/: index.tsx
src/routes/login/: index.tsx
webserver/: Cargo.toml
webserver/src/: authenticate.rs  main.rs  middleware.rs  prelude.rs  router.rs  types.rs
webserver/src/admin/: mod.rs
webserver/src/authenticate/: mod.rs  recover_password.rs  types.rs  validate_token.rs
webserver/src/entities/: fee_recurrence.rs  fees.rs  fees_room.rs  fees_room_assignment.rs  mod.rs  notifications.rs  password_recovery_requests.rs  prelude.rs  room_tenant.rs  rooms.rs  sea_orm_active_enums.rs  sessions.rs  transactions.rs  users.rs
webserver/src/household/: mod.rs
webserver/src/manager/: mod.rs
webserver/src/user/: mod.rs  types.rs
