[package]
name = "it3180-app-webserver"
version = "0.4.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-argon2 = "2.1.0"
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.5"
fastrand = "2.1.1"
jwt-simple = { version = "0.12", default-features = false, features = [
  "pure-rust",
] }
anyhow = "1.0.89"
hex = "0.4.3"
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.4", features = [
  "typed-header",
  "cookie",
  "query",
] }
utoipa = { version = "5.1.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["axum"] }
utoipa-axum = "0.1.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
regex = "1.11.1"
