[package]
name = "it3180-flat-management-app"
version = "0.2.2"
description = "A Tauri App"
authors = ["long"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.5"
jwt-simple = { version = "0.12", default-features = false, features = [
  "pure-rust",
] }
fastrand = "2.1.1"
anyhow = "1.0.89"
hex = "0.4.3"
tauri-plugin-shell = "2.0.0"
reqwest = { version = "0.12.8", features = ["json"] }
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
