[package]
name = "it3180-flat-management-app-webserver"
description = "A webserver for the IT3180 flat management app"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
rust-argon2 = "2.1.0"
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.5"
fastrand = "2.1.1"
jwt-simple = { version = "0.12", default-features = false, features = [
  "pure-rust",
] }
anyhow = "1.0.89"
hex = "0.4.3"
axum = "0.7.7"
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.4", features = [
  "typed-header",
  "cookie",
  "query",
] }
utoipa = { version = "5.1.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["axum"] }
utoipa-axum = "0.1.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
